# digitizerTuning

./: README.md  dataEfficiency.py  muonSimLaunch.py
GridScriptFolder/: launchPolyaStudies.py  polyaStudies.py
MapCreator/: CMakeLists.txt  createMap.cxx
NN/: CMakeLists.txt  createTree.C
NN/src/: TMVARegression.cxx  TMVARegressionApplication.cxx
SimDigitalScript/: SimDigital.py  digitOnLocal.py
